RESOLVED FIXED34441
Structure not accounting for anonymous slots when computing property storage size
https://bugs.webkit.org/show_bug.cgi?id=34441
Summary Structure not accounting for anonymous slots when computing property storage ...
Oliver Hunt
Reported 2010-02-01 11:38:08 PST
Structure not accounting for anonymous slots when computing property storage size
Attachments
Patch (1.85 KB, patch)
2010-02-01 11:40 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2010-02-01 11:40:07 PST
Oliver Hunt
Comment 2 2010-02-01 12:04:42 PST
Note You need to log in before you can comment on or make changes to this bug.