2010-02-01  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        Structure not accounting for anonymous slots when computing property storage size
        https://bugs.webkit.org/show_bug.cgi?id=34441

        Previously any Structure with anonymous storage would have a property map, so we
        were only including anonymous slot size if there was a property map.  Given this
        is no longer the case we should always include the anonymous slot count in the
        property storage size.

        * runtime/Structure.h:
        (JSC::Structure::propertyStorageSize):

Canonical link: https://commits.webkit.org/45507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54141 268f45cc-cd09-0410-ab3c-d52691b4dbfc